# xmpc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: config.h  data.h  ops.h  prf.h  prng.h  sse2neon.h  type.h
include/scheduler/: graph.h  graph_2.h  parser.h  scheduler.h  scheduler_2.h  utils.h
src/common/: type.cpp
src/ops/: ops.cpp
src/scheduler/: graph.cpp  parser.cpp  scheduler.cpp
src/u_test/: scheduler_test.cpp
